<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom_font="http://schemas.android.com/tools"
    android:id="@+id/htab_maincontent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/app_same_primary_color"
        android:fitsSystemWindows="true">

        <!-- HEADER View-->


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:fitsSystemWindows="true"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:fitsSystemWindows="true">

                <LinearLayout
                    android:id="@+id/lin_img"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:background="@drawable/bg_circular_view"
                    android:gravity="center">


                    <ImageView
                        android:id="@+id/movie_backdrop"
                        android:layout_width="50dip"
                        android:layout_height="50dip"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/vector_ic_user_primary" />


                </LinearLayout>

                <TextView
                    android:id="@+id/tv_usernmae"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_gravity="center"
                    android:text="Hozrot Belal"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:layout_gravity="center"
                    android:text="Software Engineer"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>
        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_primary_color"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_primary_color"
            android:orientation="vertical"
            android:layout_margin="@dimen/dp_40">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tv_favourite_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:text="@string/txt_account_favourite"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/tv_favourite_count"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_30"
                    android:text="20"
                    android:gravity="center"
                    android:padding="@dimen/dp_4"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_circular_view_light_blue"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_12" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_buy_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_22"
                android:text="@string/txt_account_buy_history"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_15" />


            <TextView
                android:id="@+id/tv_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_22"
                android:text="@string/txt_account_setting"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_15"  />


            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_22"
                android:text="@string/txt_account_logout"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_15" />


        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
