<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_primary_color"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dip"
                app:contentInsetStart="0dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/mr_back"
                    style="@style/RippleStyleBlack"
                    android:layout_width="45dip"
                    android:layout_height="45dip"
                    app:mrl_rippleDimension="10dp"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true"
                    app:mrl_rippleRoundedCorners="@dimen/dp_40">

                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="@dimen/dp_22"
                        android:layout_height="@dimen/dp_22"
                        android:layout_gravity="left|center"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginStart="@dimen/dp_10"
                        app:srcCompat="@drawable/vector_ic_back_white" />
                </com.balysv.materialripple.MaterialRippleLayout>

                <TextView
                    android:id="@+id/txt_title_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_10"
                    android:text="@string/txt_sign_in"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_title_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginEnd="@dimen/dp_15"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_15"
                    android:layout_marginStart="@dimen/dp_15"
                    android:text="@string/txt_sign_up"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="bold" />


            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp_10">



                <include
                    android:id="@+id/lin_login"
                    layout="@layout/view_login_screen" />

                <include
                    android:id="@+id/lin_sign_up"
                    layout="@layout/view_sign_up_screen"
                    android:visibility="gone" />

                <RelativeLayout
                    android:id="@+id/rel_fb_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="@drawable/bg_btn_facebook"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_fb"
                        android:layout_width="25dip"
                        android:layout_height="25dip"
                        app:srcCompat="@drawable/vector_ic_facebook_white" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_30"
                        android:text="@string/txt_social_fb_sign_in"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp_15"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rel_google_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="@drawable/bg_btn_google_plus"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_gmail"
                        android:layout_width="25dip"
                        android:layout_height="25dip"
                        app:srcCompat="@drawable/vector_ic_google_plus_white" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_30"
                        android:text="@string/txt_social_gmail_sign_in"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp_15"
                        android:textStyle="bold" />

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>