<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layt_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginStart="@dimen/dp_5"
                android:text="@string/title_user_current_pass"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/sp_17" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="0.0dip"
                android:singleLine="true"
                android:text="*"
                android:textColor="#ffff0000"
                android:textSize="12.0dip"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/edt_user_current_pass"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:background="@drawable/edit_login_background"
            android:hint="@string/title_user_current_pass"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="@dimen/dp_7"
            android:singleLine="true"
            android:textColorHint="@color/grey_500" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginStart="@dimen/dp_5"
                android:text="@string/title_user_new_pass"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/sp_17" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="0.0dip"
                android:singleLine="true"
                android:text="*"
                android:textColor="#ffff0000"
                android:textSize="12.0dip"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_user_new_pass"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/edit_login_background"
            android:hint="@string/title_user_new_pass"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="@dimen/dp_7"
            android:singleLine="true"
            android:textColorHint="@color/grey_500" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginStart="@dimen/dp_5"
                android:text="@string/title_user_confirm_pass"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/sp_17" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_2"
                android:layout_marginTop="0.0dip"
                android:singleLine="true"
                android:text="*"
                android:textColor="@color/red_600"
                android:textSize="12.0dip"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/edt_user_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/edit_login_background"
            android:hint="@string/title_user_confirm_pass"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="@dimen/dp_7"
            android:singleLine="true"
            android:textColorHint="@color/grey_500"
            android:layout_marginBottom="@dimen/dp_15"
            android:visibility="gone"/>


    </LinearLayout>


</LinearLayout>