<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ttf="http://schemas.android.com/tools"
    android:id="@+id/lin_lay_main_login"
    android:background="@color/app_primary_color"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_35">


        <TextView
            android:id="@+id/tv_reg_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:text="@string/txt_reg"
            android:textSize="@dimen/sp_30"
            android:textColor="@color/colorWhite"/>
       <!-- <bookpeon.cutprice.com.view.TypefacedTextView
            android:id="@+id/tv_reg_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:text="@string/txt_reg"
            android:textSize="@dimen/sp_35"
            android:textColor="@color/colorWhite"
            ttf:typeface="NotoSans-Regular.ttf"  />-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/dp_25"
        android:paddingTop="@dimen/dp_10"
        android:paddingRight="@dimen/dp_25">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/colorWhite"
                            app:hintTextAppearance="@style/MyAppearance">

                            <EditText
                                android:id="@+id/et_shipping_fname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:hint="@string/txt_reg_fname"
                                android:padding="@dimen/dp_7"
                                android:textColor="@color/colorWhite"
                                android:textColorHint="@color/colorWhite"
                                android:textSize="@dimen/sp_15" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="@dimen/dp_7"
                android:background="@color/off_white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/colorWhite"
                            app:hintTextAppearance="@style/MyAppearance">

                            <EditText
                                android:id="@+id/et_reg_country"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:hint="@string/txt_reg_country"
                                android:padding="@dimen/dp_7"
                                android:textColor="@color/colorWhite"
                                android:textColorHint="@color/colorWhite"
                                android:textSize="@dimen/sp_15" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="@dimen/dp_7"
                android:background="@color/off_white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/colorWhite"
                            app:hintTextAppearance="@style/MyAppearance">

                            <EditText
                                android:id="@+id/et_reg_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:hint="@string/txt_reg_email"
                                android:padding="@dimen/dp_7"
                                android:textColor="@color/colorWhite"
                                android:textColorHint="@color/colorWhite"
                                android:textSize="@dimen/sp_15" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="@dimen/dp_7"
                android:background="@color/off_white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/colorWhite"
                            app:hintTextAppearance="@style/MyAppearance">

                            <EditText
                                android:id="@+id/et_user_pass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:hint="@string/txt_reg_password"
                                android:padding="@dimen/dp_7"
                                android:inputType="textPassword"
                                android:textColor="@color/colorWhite"
                                android:textColorHint="@color/colorWhite"
                                android:textSize="@dimen/sp_15" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="@dimen/dp_7"
                android:background="@color/off_white" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_request_reg"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/btn_white_bg"
            android:text="@string/txt_reg"
            android:textAllCaps="true"
            android:textColor="@color/light_blue_500"
          />

    </LinearLayout>

</LinearLayout>
